syntax = "proto3";

package project.planton.provider.kubernetes.workload.natskubernetes.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "project/planton/shared/kubernetes/kubernetes.proto";
import "project/planton/shared/kubernetes/options.proto";
import "project/planton/shared/options/options.proto";

// custom option to store default values for the server container message
extend google.protobuf.FieldOptions {
  NatsKubernetesServerContainer default_server_container = 525001;
}

// NatsKubernetes spec holds the 80-20 configuration for a nats cluster on kubernetes.
message NatsKubernetesSpec {
  // server container settings (replicas, resources, disk).
  NatsKubernetesServerContainer server_container = 1 [
    (default_server_container) = {
      replicas: 1,
      resources: {
        limits {
          cpu: "1000m"
          memory: "2Gi"
        },
        requests {
          cpu: "100m"
          memory: "256Mi"
        }
      },
      disk_size: "10Gi"
    }
  ];
  // disable jet-stream persistence
  bool disable_jet_stream = 2;
  // authentication settings for the nats cluster.
  NatsKubernetesAuth auth = 3;
  // tls settings for the nats cluster.
  bool tls_enabled = 4;
  // optional ingress configuration for external access.
  project.planton.shared.kubernetes.IngressSpec ingress = 5;
  // toggle to deploy the nats-box utility pod.
  bool disable_nats_box = 6;
}

// server container settings for the nats stateful-set.
message NatsKubernetesServerContainer {
  // number of nats replicas; use an odd value for quorum.
  int32 replicas = 1 [
    (buf.validate.field).int32 = {gt: 0}
  ];

  // cpu and memory resources for each pod.
  project.planton.shared.kubernetes.ContainerResources resources = 2;

  // pvc size for jet-stream file store (e.g. "10Gi").
  string disk_size = 3 [
    (buf.validate.field).required = true,
    (project.planton.shared.options.recommended_default) = "1Gi"
  ];
}

// NatsKubernetesAuthScheme is the authentication scheme for the nats cluster.
enum NatsKubernetesAuthScheme {
  nats_kubernetes_auth_scheme_unspecified = 0;
  // bearer token authentication
  bearer_token = 1;
  // basic auth authentication
  basic_auth = 2;
}

// configuration for an unauthenticated ("no-auth") user.
message NatsKubernetesNoAuthUser {
  // enables the unauthenticated user when true.
  bool enabled = 1;
  // subjects on which the unauthenticated user may publish.
  // at least one subject must be specified when enabled is true.
  repeated string publish_subjects = 2;
}

// NatsKubernetesAuth holds the authentication configuration for the nats cluster.
message NatsKubernetesAuth {
  // toggle to enable authentication for the nats cluster.
  bool enabled = 1;
  // authentication scheme for the nats cluster.
  NatsKubernetesAuthScheme scheme = 2;
  // optional no-auth user configuration.
  NatsKubernetesNoAuthUser no_auth_user = 3;
}
